...
export const POST_MESSAGE_NAMES = [
  'ACCOUNT_DISPLAYED',
  'ACCOUNT_HIDDEN',
  'ALLOW_MANUAL_SELECT',
  'APP_CENTER',
  'APP_CLOSE',
  'APP_LOADED',
  'AUTH_TOKEN_EXPIRING_SOON',
  'CANCEL_COLLECTION_PRESSED',
  'CHANGE_LANGUAGE',
  'CLASSIC_QUOTE_REDIRECT',
  'COLLECTION_GROUP_CREATED',
  'COLLECTION_GROUP_ENDED',
...
  'ONBOARDING_COMPLETED',
  'OPEN_AUTHENTICATION_APP',
  'OPEN_COMPANION_APP',
  'OPEN_DANISH_MITID',
  'OPEN_FRENCH_TRUST_ME',
  'OPEN_SWEDISH_BANKID',
  'PAGE_VIEW',
  'PENSION_ADVISORY_BOOKING_REQUESTED',
  'PENSION_ADVISORY_MEETING_REQUESTED',
  'PENSION_MOVE_REQUEST_PRESSED',
  'QUOTE_ERROR',
  'REDIRECT',
  'RESET_HASH',
...
