...
          <Text style={styles.controlLabel}>Change language</Text>
        </Pressable>
        <Pressable style={styles.control} onPress={handleUpdateAuthToken}>
          <Text style={styles.controlLabel}>Update auth token</Text>
        </Pressable>
        <Pressable style={styles.control} onPress={handleReload}>
          <Text style={styles.controlLabel}>Reload</Text>
        </Pressable>
      </View>
      <View style={styles.webview}>
        <InsurelyView
          ref={insurely}
          style={styles.fill}
...
